# PokeDex

./: .gitignore  LICENSE  PokeDex.exe.manifest  PokeDex.pyw  README.md  README.mdx  changelog.md  changelog.txt  class_test.py  index.html  main.pyw  package-lock.json  package.json  pnpm-lock.yaml  pokeattacks.py  pokedexx.py  pokemonlist.txt  pokemonlisten.txt  splashscreen.html  support.py  tailwind.config.ts  uranium.py  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  publish.yml  publish_release.yml
PokeDex/: PokeDex.pyw  pokedexx.py
dearpygui/: core.pyd
dump/: pokemonlist.txt  support.py
modules/: Home.py  Uranium.py  VerticalScrolledFrame.py
public/: splashscreen.html
rebuild/: evolution.py  sprite_downloader.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: translations.csv
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  todo.rs  weakness_helpers.rs
src/components/: Accordion.tsx  CollapsibleSection.tsx  Navbar.tsx  Search.tsx  Tabs.tsx
src/pages/: Insurgence.tsx  Settings.tsx  Uranium.tsx
themes/: gray.json  green.json  red.json
